refactor and add new functionality to dataBase